@@ -169,6 +169,11 @@
       \item The \acronym{HTML} generated by \code{tools::Rd2HTML()} and
       \code{tools::toHTML()} methods is now
       \sQuote{\acronym{XHTML} 1.0 Strict}.
+
+      \item The compiler utility function \code{setCompilerOptions} now
+      returns the old values invisibly. The initial optimization level
+      can also be set with the environment variable
+      \env{R_COMPILER_OPTIMIZE}
     }
   }
 
